# Helix

./: .env.example  .gitignore  PORTFOLIO_INSTRUCTIONS.md  README.md  pyproject.toml
outputs/: ciso-2025-04-duck-curve.csv  dispatch_result.json  forecast_metrics.json  helix-mvp-plan.md  scenario_comparison.csv
scripts/: ingest_slice.py  run_dashboard.py  run_dispatch.py  run_forecast.py  run_scenarios.py  smoke_dashboard.py  verify_eia.py
src/helix/: __init__.py  api.py  chart.py  config.py  dispatch.py  eia.py  forecast.py  normalize.py  pipeline.py  scenarios.py  storage.py  synth.py
tests/: test_api.py  test_chart.py  test_dispatch.py  test_eia.py  test_forecast.py  test_normalize.py  test_scenarios.py  test_storage.py
web/: index.html
web/static/: dashboard.js  styles.css
