[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "helix-grid"
version = "0.1.0"
description = "Nuclear-plus-renewable grid intelligence on public EIA data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "duckdb>=1.3,<2",
  "fastapi>=0.115,<1",
  "numpy>=1.26,<3",
  "pyarrow>=20,<23",
  "pytz>=2025.2",
  "scikit-learn>=1.4,<2",
  "tzdata>=2025.2",
  "uvicorn>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8,<10",
  "ruff>=0.11,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--basetemp=.pytest-tmp"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
